# trustbit-rag-challenge

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/trustbit_rag_challenge/: config.py  enums.py  logging_utils.py  retriever.py  router.py  schemas.py
src/trustbit_rag_challenge/llm/: client.py  prompts.py  schemas.py
src/trustbit_rag_challenge/llm/templates/: examples_boolean.j2  examples_comparative.j2  examples_name.j2  examples_names.j2  examples_number.j2  examples_rephrasing.j2  instruction_boolean.j2  instruction_comparative.j2  instruction_number.j2  query_rephrasing.j2  query_user.j2  system_base.j2  system_rephrasing.j2
src/trustbit_rag_challenge/scripts/: generate_submission.py  index_rag_chunks.py  merge_pdf_chunks.py  prepare_rag_chunks.py  process_all.py  process_all_pdfs.py  process_single.py  process_single_pdf.py  submit.py
