[project]
name = "trustbit-rag-challenge"
version = "0.1.0"
description = ""
authors = [
    {name = "SaharaSurfer",email = "st119029@student.spbu.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "marker-pdf (>=1.10.1,<2.0.0)",
    "pypdf (>=6.4.2,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "rank-bm25 (>=0.2.2,<0.3.0)",
    "questionary (>=2.1.1,<3.0.0)",
]

[project.scripts]
process_single_pdf = "trustbit_rag_challenge.scripts.process_single_pdf:main"
process_all_pdfs = "trustbit_rag_challenge.scripts.process_all_pdfs:main"
merge_pdf_chunks = "trustbit_rag_challenge.scripts.merge_pdf_chunks:main"
prepare_rag_chunks = "trustbit_rag_challenge.scripts.prepare_rag_chunks:main"
index_rag_chunks = "trustbit_rag_challenge.scripts.index_rag_chunks:main"
generate_submission = "trustbit_rag_challenge.scripts.generate_submission:main"
submit = "trustbit_rag_challenge.scripts.submit:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "types-requests (>=2.32.4.20250913,<3.0.0.0)"
]

[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
# E: pycodestyle errors
# F: pyflakes
# I: isort (сортировка импортов)
# B: flake8-bugbear (полезные баги)
# UP: pyupgrade (обновление синтаксиса)
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = false
